syntax = "proto3";
option go_package = "logging/pb/client";
package log_message;

import "google/protobuf/timestamp.proto";

service Logger {
  rpc SendLog(LogRequest) returns (LogResponse);
}

enum LogSeverity {
  DEBUG = 0;
  INFO = 1;
  WARNING = 2;
  ERROR = 3;
  CRITICAL = 4;
}

// 서버 타입
enum ServerType {
  UNKNOWN = 0;
  INGAME = 1;
  QUESTION = 2;
  RANKING = 3;
  OUTGAME = 4;
  STATS = 5;
  LOGGING = 6;
}

// 1-15: 공통필드
// 16-99: 서버
// 100-199: 클라이언트
message LogRequest {
  string log_id = 1;                              // 로그 고유 ID
  string request_id = 2;                         // HTTP/WebSocket 요청 ID
  string session_id = 3;                         // 게임 세션 ID
  string server_id = 4;                           // 서버 인스턴스  ID
  string event_type = 5;                          // 이벤트 타입 (예: "game_session_start")
  LogSeverity severity = 6;                       // 로그 레벨
  google.protobuf.Timestamp server_time = 7;      // 서버 타임스탬프
  ServerType service_type = 8;
  string service_name = 9;                        // "ingame-server-1"
  string service_version = 10;                     // "v1.2.3"
  string environment = 11;                         // "prod", "staging", "dev"
  string server_ip = 12;
  int64 duration_ms = 13;                         // 처리 시간 (밀리초)
  int32 status_code = 14;                         // HTTP/gRPC 상태 코드
  string method = 15;                             // HTTP 메서드 또는 RPC 메서드명
  string endpoint = 16;                           // API 엔드포인트 경로
  int64 memory_usage_mb = 17;                     // 메모리 사용량
  float cpu_usage_percent = 18;                   // CPU 사용률
  int32 goroutine_count = 40;                     // Goroutine 수 (Go 특화)
  int32 active_connections = 41;                  // 활성 연결 수

  string game_mode = 42;                          // "classic", "challenge"
  string room_id = 43;                            // 게임 방 ID
  string data = 44;                              // JSON 페이로드 (유연한 추가 데이터)

  // ========== Client ===========
  string client_ip = 100;                          // 클라이언트 IP (보안 감사용)
  string user_id = 101;                            // 사용자 ID (있는경우)
  string device_id = 102;
  // app info
  string game_version = 103;
  string platform = 104;
  string os_version = 105;
  string device_model = 106;
  // localization
  string country_code = 107;
  string language = 108;
  string timezone = 109;
  string region = 110;
  // network
  string network_type = 111;
  string ping_ms = 112;
  int32 fps = 113;
  int64 client_memory_usage_mb = 114;
  float client_cpu_usage_count = 115;
  string client_data = 116;
}

message LogResponse {
  bool success = 1;
  string message = 2;
}